[SPv175+] Flip mask clip rect for inline object writing mode

Bug: 768691
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I46857805a46a44c9c3a2ce3280d7dbb3e32c0825
Reviewed-on: https://chromium-review.googlesource.com/882454
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531993}
Former-commit-id: aa1132254d99bcf2170f03b8e2eecdc7c378be0d